# quali-bot

./: .env.example  .gitignore  .mcp.json  README.md  analyze_fn_v2.py  annotate_guards.py  build_callgraph.py  build_trait_map.py  code_index.py  config.toml  dead_end_functions.py  docker-compose.yml  enrich_flows.py  find_impact.py  impact_adyen_get_auth_header_new.json  run.sh  ts_backprop.py
coverage-mcp-server/: .env.example  Dockerfile  README.md  claude_desktop_config.example.json  jenkins_pipeline_snippet.groovy  keygen.py  pyproject.toml  test_tools.py
coverage-mcp-server/src/coverage_mcp/: __init__.py  config.py  db.py  fetcher.py  llvm_parser.py  parser.py  server.py
hs_indexer/: __main__.py  analyze_fn_v2.py  annotate_guards.py  build_callgraph.py  build_trait_map.py  db.py  dead_end_functions.py  enrich_flows.py  filter_false_positives.py  find_impact.py  impact_adyen_get_auth_header_new.json  impact_validate_customer_access_v2.json  impact_wellsfargo_incremental_auth_new.json  main.py  setup_and_generate.sh
report-generater/: README.md  build_source_index.py  coverage_feedback_loop.py  coverage_flow_gap.py  enrich_flow_json_sources.py  generate_final_report.py  local_test_env.example.sh  parse_cypress_output.py  run_flow_coverage_report.sh  run_organization_create_report.sh
report-generater/config/: development.toml
sync/: Dockerfile  keygen.py  sync.py
testing_agent/: adyen_get_auth_header_output.json  codegen.py  flow_context.py  flow_query.py  indexer.py  input.json  input_raw.json  run_flow_pipeline.py  runner.py
(+28 files in other folders)
