[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coverage-mcp-server"
version = "0.1.0"
description = "MCP server for LLVM coverage reports from S3"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
coverage-mcp-server = "coverage_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coverage_mcp"]
